Bug 1836810 Part 2: Update macOS CTS test expectations. r=bradwerth
Differential Revision: https://phabricator.services.mozilla.com/D182607

--- a/testing/web-platform/mozilla/meta/webgpu/chunked/21/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/21/cts.https.html.ini
@@ -126,6 +126,10 @@
   disabled: true
 
 [cts.https.html?q=webgpu:api,validation,queue,buffer_mapped:map_command_recording_order:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,validation,queue,buffer_mapped:copyBufferToTexture:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
@@ -137,6 +141,14 @@
 
   [:state="valid"]
     expected: FAIL
+
+  [:state="detached-nocontext"]
+    expected:
+      if os == "mac": FAIL
+
+  [:state="detached-hascontext"]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:api,validation,image_copy,texture_related:size_alignment:*]
@@ -183,6 +195,10 @@
 [cts.https.html?q=webgpu:api,validation,queue,copyToTexture,CopyExternalImageToTexture:source_imageBitmap,state:*]
   [:closed=false]
     expected: FAIL
+
+  [:closed=true]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:api,validation,image_copy,texture_related:sample_count:*]
