--- a/testing/web-platform/mozilla/meta/webgpu/chunked/22/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/22/cts.https.html.ini
@@ -3,6 +3,10 @@
   disabled: true
 
 [cts.https.html?q=webgpu:api,validation,queue,writeBuffer:usages:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,validation,render_pass,attachment_compatibility:render_pass_or_bundle_and_pipeline,color_sparse:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
@@ -19,17 +23,60 @@
 
 
 [cts.https.html?q=webgpu:api,validation,render_pass,attachment_compatibility:render_pass_or_bundle_and_pipeline,depth_format:*]
+  [:encoderType="render%20pass";encoderFormatFeature="_undef_";pipelineFormatFeature="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:encoderType="render%20pass";encoderFormatFeature="_undef_";pipelineFormatFeature="depth32float-stencil8"]
+    expected:
+      if os == "mac": FAIL
+
+  [:encoderType="render%20pass";encoderFormatFeature="depth32float-stencil8";pipelineFormatFeature="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:encoderType="render%20pass";encoderFormatFeature="depth32float-stencil8";pipelineFormatFeature="depth32float-stencil8"]
+    expected:
+      if os == "mac": FAIL
+
+  [:encoderType="render%20bundle";encoderFormatFeature="_undef_";pipelineFormatFeature="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:encoderType="render%20bundle";encoderFormatFeature="_undef_";pipelineFormatFeature="depth32float-stencil8"]
+    expected:
+      if os == "mac": FAIL
+
+  [:encoderType="render%20bundle";encoderFormatFeature="depth32float-stencil8";pipelineFormatFeature="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:encoderType="render%20bundle";encoderFormatFeature="depth32float-stencil8";pipelineFormatFeature="depth32float-stencil8"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,validation,render_pass,attachment_compatibility:render_pass_or_bundle_and_pipeline,color_count:*]
+  [:encoderType="render%20pass"]
+    expected:
+      if os == "mac": FAIL
+
+  [:encoderType="render%20bundle"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,validation,render_pass,attachment_compatibility:render_pass_or_bundle_and_pipeline,color_format:*]
   [:encoderType="render%20pass"]
     expected:
+      if os == "mac": FAIL
       if os == "win": [PASS, FAIL]
 
   [:encoderType="render%20bundle"]
     expected:
+      if os == "mac": FAIL
       if os == "win": [PASS, FAIL]
+
 
 
 [cts.https.html?q=webgpu:api,validation,queue,writeBuffer:buffer_state:*]
@@ -58,12 +105,20 @@
   [:sampleCount=4]
     expected: FAIL
 
+  [:sampleCount=1]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,validation,queue,writeBuffer:buffer,device_mismatch:*]
   # TODO: See <https://bugzilla.mozilla.org/show_bug.cgi?id=1843247>
   disabled: true
 
 [cts.https.html?q=webgpu:api,validation,queue,writeTexture:usages:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,validation,queue,destroyed,query_set:beginOcclusionQuery:*]
   [:]
