--- a/testing/web-platform/mozilla/meta/webgpu/chunked/45/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/45/cts.https.html.ini
@@ -10,6 +10,150 @@
   disabled: true
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,transpose:f16:*]
+  [:inputSource="const";rows=2;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";rows=2;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";rows=2;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";rows=3;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";rows=3;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";rows=3;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";rows=4;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";rows=4;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";rows=4;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=2;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=2;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=2;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=3;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=3;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=3;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=4;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=4;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=4;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=2;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=2;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=2;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=3;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=3;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=3;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=4;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=4;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=4;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=2;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=2;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=2;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=3;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=3;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=3;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=4;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=4;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=4;cols=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,memory_model,barrier:workgroup_barrier_load_store:*]
   [:memType="non_atomic_storage"]
@@ -26,6 +170,18 @@
     if os == "linux": true
   [:inputSource="const"]
     expected: FAIL
+
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,trunc:f32:*]
@@ -72,12 +228,168 @@
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,memory_model,weak:message_passing:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
   disabled: true
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,transpose:f32:*]
+  [:inputSource="const";rows=2;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";rows=2;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";rows=2;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";rows=3;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";rows=3;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";rows=3;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";rows=4;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";rows=4;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";rows=4;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=2;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=2;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=2;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=3;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=3;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=3;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=4;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=4;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";rows=4;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=2;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=2;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=2;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=3;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=3;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=3;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=4;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=4;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";rows=4;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=2;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=2;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=2;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=3;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=3;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=3;cols=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=4;cols=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=4;cols=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";rows=4;cols=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,unary,bool_logical:negation:*]
   [:inputSource="const";vectorize="_undef_"]
@@ -125,6 +437,18 @@
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,memory_model,atomicity:atomicity:*]
   expected:
@@ -145,10 +469,98 @@
   [:inputSource="const"]
     expected: FAIL
 
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,workgroupBarrier:stage:*]
+  [:stage="vertex"]
+    expected:
+      if os == "mac": FAIL
+
+  [:stage="fragment"]
+    expected:
+      if os == "mac": FAIL
+
+  [:stage="compute"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,trunc:f16:*]
+  [:inputSource="const";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,memory_model,coherence:coww:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
@@ -207,6 +619,14 @@
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,memory_model,coherence:cowr:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
@@ -217,6 +637,10 @@
   disabled: true
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,workgroupBarrier:barrier:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,memory_model,coherence:corr:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
@@ -266,19 +690,131 @@
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,unpack2x16unorm:unpack:*]
   [:inputSource="const"]
     expected: FAIL
+
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,unpack4x8unorm:unpack:*]
   [:inputSource="const"]
     expected: FAIL
 
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,trunc:abstract_float:*]
+  [:inputSource="const";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,unpack4x8snorm:unpack:*]
   [:inputSource="const"]
     expected: FAIL
+
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
