--- a/testing/web-platform/mozilla/meta/webgpu/chunked/5/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/5/cts.https.html.ini
@@ -1,6 +1,14 @@
 [cts.https.html?q=webgpu:api,operation,render_pass,clear_value:loaded:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,rendering,basic:clear:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,reflection:query_set_reflection_attributes:*]
   [:]
@@ -8,11 +16,148 @@
 
 
 [cts.https.html?q=webgpu:api,operation,render_pipeline,pipeline_output_targets:color,component_count:*]
+  [:format="r8unorm"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="r8uint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="r8sint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="r16uint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="r16sint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="r16float"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg8unorm"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg8uint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg8sint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="r32uint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="r32sint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="r32float"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg16uint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg16sint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg16float"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba8unorm"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba8unorm-srgb"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba8uint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba8sint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="bgra8unorm"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="bgra8unorm-srgb"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgb10a2unorm"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg32uint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg32sint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg32float"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba16uint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba16sint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba16float"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba32uint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba32sint"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba32float"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,render_pass,storeOp:render_pass_store_op,multiple_color_attachments:*]
+  [:storeOperation1="discard";storeOperation2="discard"]
+    expected:
+      if os == "mac": FAIL
+
+  [:storeOperation1="discard";storeOperation2="store"]
+    expected:
+      if os == "mac": FAIL
+
+  [:storeOperation1="store";storeOperation2="discard"]
+    expected:
+      if os == "mac": FAIL
+
   [:storeOperation1="store";storeOperation2="store"]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:api,operation,render_pass,storeOp:render_pass_store_op,color_attachment_only:*]
@@ -330,26 +475,60 @@
 
 
 [cts.https.html?q=webgpu:api,operation,render_pass,storeOp:render_pass_store_op,color_attachment_with_depth_stencil_attachment:*]
-  [:colorStoreOperation="store";depthStencilStoreOperation="discard"]
+  [:colorStoreOperation="discard";depthStencilStoreOperation="discard"]
+    expected:
+      if os == "mac": FAIL
+
+  [:colorStoreOperation="discard";depthStencilStoreOperation="store"]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
+
+  [:colorStoreOperation="store";depthStencilStoreOperation="discard"]
+    expected:
+      if os == "mac": FAIL
+
+  [:colorStoreOperation="store";depthStencilStoreOperation="store"]
+    expected:
+      if os == "mac": FAIL
 
   [:colorStoreOperation="store";depthStencilStoreOperation="store"]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:api,operation,render_pass,storeop2:storeOp_controls_whether_1x1_drawn_quad_is_stored:*]
+  [:storeOp="store"]
+    expected:
+      if os == "mac": FAIL
+
+  [:storeOp="discard"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,render_pipeline,sample_mask:final_output:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
   disabled: true
 
 [cts.https.html?q=webgpu:api,operation,render_pass,clear_value:stored:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,render_pass,clear_value:layout:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,render_pass,clear_value:srgb:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,render_pipeline,primitive_topology:unaligned_vertex_count:*]
   [:topology="line-list";indirect=true;drawCount=5]
@@ -360,6 +539,18 @@
 
   [:topology="triangle-list";indirect=true;drawCount=4]
     expected: FAIL
+
+  [:topology="line-list";indirect=false;drawCount=5]
+    expected:
+      if os == "mac": FAIL
+
+  [:topology="triangle-list";indirect=false;drawCount=5]
+    expected:
+      if os == "mac": FAIL
+
+  [:topology="triangle-list";indirect=false;drawCount=4]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:api,operation,render_pipeline,primitive_topology:basic:*]
@@ -384,6 +575,34 @@
   [:topology="triangle-strip";indirect=true;primitiveRestart=true]
     expected: FAIL
 
+  [:topology="point-list";indirect=false;primitiveRestart=false]
+    expected:
+      if os == "mac": FAIL
+
+  [:topology="line-list";indirect=false;primitiveRestart=false]
+    expected:
+      if os == "mac": FAIL
+
+  [:topology="line-strip";indirect=false;primitiveRestart=false]
+    expected:
+      if os == "mac": FAIL
+
+  [:topology="line-strip";indirect=false;primitiveRestart=true]
+    expected:
+      if os == "mac": FAIL
+
+  [:topology="triangle-list";indirect=false;primitiveRestart=false]
+    expected:
+      if os == "mac": FAIL
+
+  [:topology="triangle-strip";indirect=false;primitiveRestart=false]
+    expected:
+      if os == "mac": FAIL
+
+  [:topology="triangle-strip";indirect=false;primitiveRestart=true]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,render_pipeline,overrides:shared_shader_module:*]
   [:isAsync=true]
@@ -402,6 +621,22 @@
 
 
 [cts.https.html?q=webgpu:api,operation,render_pipeline,pipeline_output_targets:color,component_count,blend:*]
+  [:format="r8unorm"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg8unorm"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba8unorm"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="bgra8unorm"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,render_pass,resolve:render_pass_resolve:*]
   [:storeOperation="discard"]
@@ -527,6 +762,10 @@
 
 
 [cts.https.html?q=webgpu:api,operation,render_pipeline,vertex_only_render_pipeline:draw_depth_and_stencil_with_vertex_only_pipeline:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,render_pipeline,overrides:basic:*]
   [:isAsync=true]
@@ -597,8 +836,72 @@
   [:stencilFormat="depth32float-stencil8";stencilClearValue=65539;applyStencilClearValueAsStencilReferenceValue=false]
     expected: FAIL
 
+  [:stencilFormat="stencil8";stencilClearValue=0;applyStencilClearValueAsStencilReferenceValue=true]
+    expected:
+      if os == "mac": FAIL
+
+  [:stencilFormat="stencil8";stencilClearValue=0;applyStencilClearValueAsStencilReferenceValue=false]
+    expected:
+      if os == "mac": FAIL
+
+  [:stencilFormat="stencil8";stencilClearValue=1;applyStencilClearValueAsStencilReferenceValue=true]
+    expected:
+      if os == "mac": FAIL
+
+  [:stencilFormat="stencil8";stencilClearValue=1;applyStencilClearValueAsStencilReferenceValue=false]
+    expected:
+      if os == "mac": FAIL
+
+  [:stencilFormat="stencil8";stencilClearValue=255;applyStencilClearValueAsStencilReferenceValue=true]
+    expected:
+      if os == "mac": FAIL
+
+  [:stencilFormat="stencil8";stencilClearValue=255;applyStencilClearValueAsStencilReferenceValue=false]
+    expected:
+      if os == "mac": FAIL
+
+  [:stencilFormat="stencil8";stencilClearValue=258;applyStencilClearValueAsStencilReferenceValue=true]
+    expected:
+      if os == "mac": FAIL
+
+  [:stencilFormat="stencil8";stencilClearValue=258;applyStencilClearValueAsStencilReferenceValue=false]
+    expected:
+      if os == "mac": FAIL
+
+  [:stencilFormat="stencil8";stencilClearValue=65539;applyStencilClearValueAsStencilReferenceValue=true]
+    expected:
+      if os == "mac": FAIL
+
+  [:stencilFormat="stencil8";stencilClearValue=65539;applyStencilClearValueAsStencilReferenceValue=false]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,render_pipeline,culling_tests:culling:*]
+  [:frontFace="ccw";cullMode="none"]
+    expected:
+      if os == "mac": FAIL
+
+  [:frontFace="ccw";cullMode="front"]
+    expected:
+      if os == "mac": FAIL
+
+  [:frontFace="ccw";cullMode="back"]
+    expected:
+      if os == "mac": FAIL
+
+  [:frontFace="cw";cullMode="none"]
+    expected:
+      if os == "mac": FAIL
+
+  [:frontFace="cw";cullMode="front"]
+    expected:
+      if os == "mac": FAIL
+
+  [:frontFace="cw";cullMode="back"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,render_pipeline,overrides:precision:*]
   [:isAsync=true]
