--- a/testing/web-platform/mozilla/meta/webgpu/chunked/8/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/8/cts.https.html.ini
@@ -1,6 +1,14 @@
 [cts.https.html?q=webgpu:api,operation,texture_view,read:aspect:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,texture_view,write:aspect:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,texture_view,format_reinterpretation:render_and_resolve_attachment:*]
   [:format="rgba8unorm";viewFormat="rgba8unorm-srgb";sampleCount=4]
@@ -24,11 +32,16 @@
   [:format="bgra8unorm-srgb";viewFormat="bgra8unorm";sampleCount=4]
     expected: FAIL
 
+  [:format="rgba8unorm";viewFormat="rgba8unorm-srgb";sampleCount=1]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,correctness:max_buffers_and_attribs:*]
   [:format="uint8x4"]
     expected:
       if os == "linux": [FAIL, PASS]
+      if os == "mac": [FAIL, PASS]
       if os == "win": [FAIL, PASS]
 
   [:format="sint8x2"]
@@ -115,6 +128,10 @@
   [:format="sint32x4"]
     expected: FAIL
 
+  [:format="uint8x2"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,correctness:vertex_format_to_shader_format_conversion:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
@@ -130,6 +147,10 @@
   [:format="bgra8unorm-srgb";viewFormat="bgra8unorm"]
     expected: FAIL
 
+  [:format="rgba8unorm";viewFormat="rgba8unorm-srgb"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,uncapturederror:constructor:*]
 
@@ -140,8 +161,16 @@
 [cts.https.html?q=webgpu:api,operation,uncapturederror:uncapturederror_from_non_originating_thread:*]
 
 [cts.https.html?q=webgpu:api,operation,texture_view,read:format:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,texture_view,write:format:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,correctness:vertex_buffer_used_multiple_times_interleaved:*]
   [:format="uint8x2"]
@@ -325,6 +354,10 @@
   [:format="sint32x4"]
     expected: FAIL
 
+  [:format="uint8x2"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,correctness:non_zero_array_stride_and_attribute_offset:*]
   [:format="uint8x2"]
@@ -424,6 +457,10 @@
 
 
 [cts.https.html?q=webgpu:api,operation,texture_view,write:dimension:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,correctness:vertex_buffer_used_multiple_times_overlapped:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
@@ -438,6 +475,14 @@
 
   [:valid=false;name="carriage-return"]
     expected: FAIL
+
+  [:valid=true;name="ascii"]
+    expected:
+      if os == "mac": FAIL
+
+  [:valid=true;name="unicode"]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,correctness:array_stride_zero:*]
@@ -454,6 +499,14 @@
   [:valid=false;name="carriage-return"]
     expected: FAIL
 
+  [:valid=true;name="ascii"]
+    expected:
+      if os == "mac": FAIL
+
+  [:valid=true;name="unicode"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,uncapturederror:only_original_device_is_event_target:*]
 
@@ -463,6 +516,10 @@
 
 
 [cts.https.html?q=webgpu:api,operation,texture_view,read:dimension:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,uncapturederror:iff_uncaptured:*]
 
