--- a/testing/web-platform/mozilla/meta/webgpu/chunked/30/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/30/cts.https.html.ini
@@ -46,6 +46,18 @@
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,bool_logical:equals:*]
   [:inputSource="const";vectorize="_undef_"]
@@ -90,6 +102,18 @@
 
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,bitwise:bitwise_or:*]
@@ -183,6 +207,14 @@
   [:type="u32";inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:type="i32";inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:type="i32";inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:idl,constants,flags:ShaderStage,values:*]
 
@@ -234,11 +266,24 @@
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:binary_mixed:*]
   [:name="ArithAndLogical"]
     expected:
       if os == "linux": [FAIL, PASS]
+      if os == "mac": FAIL
       if os == "win": FAIL
 
   [:name="LogicalAndArith"]
@@ -261,6 +306,7 @@
   [:name="LeftSE"]
     expected:
       if os == "linux": [FAIL, PASS]
+      if os == "mac": FAIL
       if os == "win": FAIL
 
   [:name="RightSE"]
@@ -274,6 +320,7 @@
   [:name="OneSE"]
     expected:
       if os == "linux": [FAIL, PASS]
+      if os == "mac": FAIL
       if os == "win": FAIL
 
   [:name="AllSE"]
@@ -376,6 +423,14 @@
   [:type="u32";inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:type="i32";inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:type="i32";inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,bitwise:bitwise_exclusive_or:*]
   [:type="i32";inputSource="const";vectorize="_undef_"]
@@ -472,11 +527,20 @@
   [:type="u32";inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:type="i32";inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:type="i32";inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:binary_arith:*]
   [:name="BothSE"]
     expected:
       if os == "linux": [FAIL, PASS]
+      if os == "mac": FAIL
       if os == "win": FAIL
 
   [:name="LeftSE"]
@@ -549,6 +613,18 @@
   [:inputSource="const"]
     expected: FAIL
 
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:idl,constants,flags:ShaderStage,count:*]
 
@@ -560,6 +636,7 @@
   [:name="Vec"]
     expected:
       if os == "linux": [FAIL, PASS]
+      if os == "mac": FAIL
       if os == "win": FAIL
 
   [:name="Struct"]
@@ -570,11 +647,24 @@
   [:inputSource="const"]
     expected: FAIL
 
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:binary_logical:*]
   [:name="BothSE"]
     expected:
       if os == "linux": [FAIL, PASS]
+      if os == "mac": FAIL
       if os == "win": FAIL
 
   [:name="LeftSE"]
@@ -617,6 +707,7 @@
   [:name="Struct"]
     expected:
       if os == "linux": [FAIL, PASS]
+      if os == "mac": FAIL
       if os == "win": FAIL
 
   [:name="Array1D"]
