--- a/testing/web-platform/mozilla/meta/webgpu/chunked/31/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/31/cts.https.html.ini
@@ -43,6 +43,14 @@
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,u32_arithmetic:addition:*]
   [:inputSource="const";vectorize="_undef_"]
@@ -86,6 +94,14 @@
 
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,i32_arithmetic:division:*]
@@ -180,6 +196,18 @@
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,f32_logical:greater_equals:*]
   [:inputSource="const";vectorize="_undef_"]
@@ -222,6 +250,18 @@
 
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,f32_logical:equals:*]
@@ -268,6 +308,18 @@
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,u32_arithmetic:subtraction:*]
   [:inputSource="const";vectorize="_undef_"]
@@ -313,6 +365,14 @@
 
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,f32_logical:less_than:*]
@@ -361,8 +421,84 @@
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,abs:abstract_int:*]
+  [:inputSource="const";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,bool_logical:not_equals:*]
   [:inputSource="const";vectorize="_undef_"]
@@ -409,6 +545,18 @@
 
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,i32_arithmetic:multiplication:*]
@@ -515,6 +663,18 @@
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,i32_arithmetic:subtraction:*]
   [:inputSource="const";vectorize="_undef_"]
@@ -559,6 +719,14 @@
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,u32_arithmetic:multiplication_scalar_vector:*]
   [:inputSource="const";vectorize_rhs=2]
@@ -589,6 +757,18 @@
 
   [:inputSource="storage_rw";vectorize_rhs=4]
     expected: FAIL
+
+  [:inputSource="uniform";vectorize_rhs=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize_rhs=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize_rhs=2]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,i32_arithmetic:addition:*]
@@ -634,6 +814,14 @@
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,f32_arithmetic:division:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
@@ -678,6 +866,18 @@
 
   [:inputSource="const";vectorize_lhs=2]
     expected: FAIL
+
+  [:inputSource="uniform";vectorize_lhs=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize_lhs=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize_lhs=2]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,i32_arithmetic:remainder:*]
@@ -773,6 +973,18 @@
 
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,binary,f32_arithmetic:subtraction:*]
