--- a/testing/web-platform/mozilla/meta/webgpu/chunked/39/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/39/cts.https.html.ini
@@ -1,4 +1,20 @@
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,modf:f16_vec4_whole:*]
+  [:inputSource="const"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,modf:f32_vec3_whole:*]
   [:inputSource="const"]
@@ -15,6 +31,22 @@
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,modf:f16_vec2_fract:*]
+  [:inputSource="const"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,pack4x8unorm:pack:*]
   [:inputSource="const"]
@@ -23,13 +55,36 @@
   [:inputSource="uniform"]
     expected: FAIL
 
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,modf:f16_vec4_fract:*]
+  [:inputSource="const"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,pow:f32:*]
   disabled:
     if os == "linux": true
-
   [:inputSource="const";vectorize="_undef_"]
     expected: FAIL
 
@@ -72,8 +127,80 @@
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,normalize:abstract_float:*]
+  [:inputSource="const";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,modf:f32_vec4_whole:*]
   [:inputSource="const"]
@@ -96,6 +223,14 @@
   [:inputSource="uniform"]
     expected: FAIL
 
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,modf:f32_vec4_fract:*]
   [:inputSource="const"]
@@ -112,24 +247,272 @@
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,pow:f16:*]
+  [:inputSource="const";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,modf:f16_vec3_whole:*]
+  [:inputSource="const"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,normalize:f32_vec2:*]
   [:inputSource="const"]
     expected: FAIL
 
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,pow:abstract_float:*]
+  [:inputSource="const";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,pack2x16snorm:pack:*]
   [:inputSource="const"]
     expected: FAIL
 
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,normalize:f16:*]
+  [:inputSource="const";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,modf:f16_fract:*]
+  [:inputSource="const"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,pack4x8snorm:pack:*]
   [:inputSource="const"]
@@ -138,15 +521,67 @@
   [:inputSource="uniform"]
     expected: FAIL
 
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,normalize:f32_vec3:*]
   [:inputSource="const"]
     expected: FAIL
 
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,modf:f16_vec2_whole:*]
+  [:inputSource="const"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,modf:f16_whole:*]
+  [:inputSource="const"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,modf:f32_vec3_fract:*]
   [:inputSource="const"]
@@ -166,9 +601,49 @@
   [:inputSource="const"]
     expected: FAIL
 
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,modf:f16_vec3_fract:*]
+  [:inputSource="const"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,normalize:f32_vec4:*]
   [:inputSource="const"]
     expected: FAIL
+
+  [:inputSource="uniform"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
