--- a/testing/web-platform/mozilla/meta/webgpu/chunked/40/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/40/cts.https.html.ini
@@ -1,4 +1,68 @@
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,sign:abstract_float:*]
+  [:inputSource="const";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,reverseBits:i32:*]
   [:inputSource="const";vectorize="_undef_"]
@@ -41,6 +105,18 @@
 
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,saturate:f32:*]
@@ -89,6 +165,14 @@
 
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,quantizeToF16:f32:*]
@@ -142,10 +226,154 @@
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,refract:abstract_float:*]
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,reflect:abstract_float:*]
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,refract:f16:*]
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,radians:f32:*]
   [:inputSource="const";vectorize="_undef_"]
@@ -190,6 +418,18 @@
 
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,reverseBits:u32:*]
@@ -238,6 +478,18 @@
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,reflect:f32_vec4:*]
   [:inputSource="const"]
@@ -246,8 +498,80 @@
   [:inputSource="uniform"]
     expected: FAIL
 
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,radians:abstract_float:*]
+  [:inputSource="const";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,reflect:f32_vec3:*]
   [:inputSource="const"]
@@ -256,8 +580,80 @@
   [:inputSource="uniform"]
     expected: FAIL
 
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,round:f16:*]
+  [:inputSource="const";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,refract:f32_vec3:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
@@ -403,12 +799,88 @@
   [:inputSource="storage_rw";component="u";overload="vec4"]
     expected: FAIL
 
+  [:inputSource="uniform";component="b";overload="vec2"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";component="b";overload="vec2"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";component="b";overload="vec2"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,refract:f32_vec4:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
   disabled: true
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,round:abstract_float:*]
+  [:inputSource="const";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,select:scalar:*]
   [:inputSource="const";component="b";overload="scalar"]
@@ -598,8 +1070,68 @@
   [:inputSource="storage_rw";component="u";overload="vec4"]
     expected: FAIL
 
+  [:inputSource="uniform";component="b";overload="scalar"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";component="b";overload="scalar"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";component="b";overload="scalar"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,reflect:f16:*]
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,refract:f32_vec2:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
@@ -612,8 +1144,80 @@
   [:inputSource="uniform"]
     expected: FAIL
 
+  [:inputSource="storage_r"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,saturate:abstract_float:*]
+  [:inputSource="const";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,round:f32:*]
   [:inputSource="const";vectorize="_undef_"]
@@ -661,7 +1265,146 @@
   [:inputSource="storage_rw";vectorize=4]
     expected: FAIL
 
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,radians:f16:*]
+  [:inputSource="const";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:shader,execution,expression,call,builtin,saturate:f16:*]
+  [:inputSource="const";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="const";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="uniform";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_r";vectorize=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=3]
+    expected:
+      if os == "mac": FAIL
+
+  [:inputSource="storage_rw";vectorize=4]
+    expected:
+      if os == "mac": FAIL
