--- a/testing/web-platform/mozilla/meta/webgpu/chunked/6/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/6/cts.https.html.ini
@@ -1,4 +1,12 @@
 [cts.https.html?q=webgpu:api,operation,rendering,depth:reverse_depth:*]
+  [:reversed=false]
+    expected:
+      if os == "mac": FAIL
+
+  [:reversed=true]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,rendering,draw:default_arguments:*]
   [:mode="draw"]
@@ -9,8 +17,40 @@
 
 
 [cts.https.html?q=webgpu:api,operation,rendering,depth_bias:depth_bias:*]
+  [:quadAngle=0;bias=8388608;biasSlopeScale=0;biasClamp=0]
+    expected:
+      if os == "mac": FAIL
+
+  [:quadAngle=0;bias=8388608;biasSlopeScale=0;biasClamp=0.125]
+    expected:
+      if os == "mac": FAIL
+
+  [:quadAngle=0;bias=-8388608;biasSlopeScale=0;biasClamp=0.125]
+    expected:
+      if os == "mac": FAIL
+
+  [:quadAngle=0;bias=-8388608;biasSlopeScale=0;biasClamp=-0.125]
+    expected:
+      if os == "mac": FAIL
+
+  [:quadAngle=1;bias=0;biasSlopeScale=0;biasClamp=0]
+    expected:
+      if os == "mac": FAIL
+
+  [:quadAngle=1;bias=0;biasSlopeScale=1;biasClamp=0]
+    expected:
+      if os == "mac": FAIL
+
+  [:quadAngle=1;bias=0;biasSlopeScale=-0.5;biasClamp=0]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,rendering,basic:fullscreen_quad:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,rendering,depth_clip_clamp:depth_clamp_and_clip:*]
   disabled:
@@ -283,6 +323,7 @@
   [:format="depth32float-stencil8";unclippedDepth=true;writeDepth=false;multisampled=true]
     expected:
       if os == "linux": [FAIL, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
       if os == "win": [FAIL, PASS]
 
   [:format="depth32float-stencil8";unclippedDepth=true;writeDepth=true;multisampled=false]
@@ -295,8 +336,48 @@
       if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       FAIL
 
+  [:format="depth32float";unclippedDepth="_undef_";writeDepth=false;multisampled=false]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="depth32float";unclippedDepth=true;writeDepth=false;multisampled=false]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="depth32float-stencil8";unclippedDepth="_undef_";writeDepth=false;multisampled=false]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="depth32float-stencil8";unclippedDepth=true;writeDepth=false;multisampled=false]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,rendering,depth_bias:depth_bias_24bit_format:*]
+  [:format="depth24plus";quadAngle=0;bias=8388608;biasSlopeScale=0;biasClamp=0]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="depth24plus";quadAngle=0;bias=8388608;biasSlopeScale=0;biasClamp=0.1]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="depth24plus";quadAngle=1;bias=8388608;biasSlopeScale=1;biasClamp=0]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="depth24plus-stencil8";quadAngle=0;bias=8388608;biasSlopeScale=0;biasClamp=0]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="depth24plus-stencil8";quadAngle=0;bias=8388608;biasSlopeScale=0;biasClamp=0.1]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="depth24plus-stencil8";quadAngle=1;bias=8388608;biasSlopeScale=1;biasClamp=0]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,rendering,draw:vertex_attributes,basic:*]
   expected:
@@ -601,6 +682,22 @@
       if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       FAIL
 
+  [:vertex_attribute_count=1;vertex_buffer_count=1;vertex_format="uint32";step_mode="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:vertex_attribute_count=4;vertex_buffer_count=1;vertex_format="uint32";step_mode="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:vertex_attribute_count=8;vertex_buffer_count=1;vertex_format="uint32";step_mode="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
+  [:vertex_attribute_count=16;vertex_buffer_count=1;vertex_format="uint32";step_mode="_undef_"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,rendering,indirect_draw:basics:*]
   [:isIndexed=true]
@@ -638,82 +735,103 @@
   [:format="depth32float";unclippedDepth=false;multisampled=false]
     expected:
       if os == "linux": FAIL
+      if os == "mac": FAIL
 
   [:format="depth32float";unclippedDepth=false;multisampled=true]
     expected:
       if os == "linux": FAIL
+      if os == "mac": FAIL
 
   [:format="depth32float";unclippedDepth=true;multisampled=false]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
   [:format="depth32float";unclippedDepth=true;multisampled=true]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
   [:format="depth16unorm";unclippedDepth=false;multisampled=false]
     expected:
       if os == "linux": FAIL
+      if os == "mac": FAIL
 
   [:format="depth16unorm";unclippedDepth=false;multisampled=true]
     expected:
       if os == "linux": FAIL
+      if os == "mac": FAIL
 
   [:format="depth16unorm";unclippedDepth=true;multisampled=false]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
   [:format="depth16unorm";unclippedDepth=true;multisampled=true]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
   [:format="depth24plus";unclippedDepth=false;multisampled=false]
     expected:
       if os == "linux": FAIL
+      if os == "mac": FAIL
 
   [:format="depth24plus";unclippedDepth=false;multisampled=true]
     expected:
       if os == "linux": FAIL
+      if os == "mac": FAIL
 
   [:format="depth24plus";unclippedDepth=true;multisampled=false]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
   [:format="depth24plus";unclippedDepth=true;multisampled=true]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
   [:format="depth24plus-stencil8";unclippedDepth=false;multisampled=false]
     expected:
       if os == "linux": FAIL
+      if os == "mac": FAIL
 
   [:format="depth24plus-stencil8";unclippedDepth=false;multisampled=true]
     expected:
       if os == "linux": FAIL
+      if os == "mac": FAIL
 
   [:format="depth24plus-stencil8";unclippedDepth=true;multisampled=false]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
   [:format="depth24plus-stencil8";unclippedDepth=true;multisampled=true]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
   [:format="depth32float-stencil8";unclippedDepth=false;multisampled=false]
     expected:
       if os == "linux": FAIL
+      if os == "mac": FAIL
 
   [:format="depth32float-stencil8";unclippedDepth=false;multisampled=true]
     expected:
       if os == "linux": FAIL
+      if os == "mac": FAIL
 
   [:format="depth32float-stencil8";unclippedDepth=true;multisampled=false]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
   [:format="depth32float-stencil8";unclippedDepth=true;multisampled=true]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
+
 
 
 [cts.https.html?q=webgpu:api,operation,rendering,depth:depth_test_fail:*]
@@ -738,16 +856,64 @@
 
 
 [cts.https.html?q=webgpu:api,operation,rendering,color_target_state:blending,formats:*]
+  [:format="r8unorm"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="r16float"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg8unorm"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg16float"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba8unorm"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba8unorm-srgb"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="bgra8unorm"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="bgra8unorm-srgb"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgb10a2unorm"]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba16float"]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,rendering,color_target_state:blending,GPUBlendComponent:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
   disabled: true
 
 [cts.https.html?q=webgpu:api,operation,rendering,draw:largeish_buffer:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,rendering,color_target_state:color_write_mask,blending_disabled:*]
   [:disabled=true]
     expected: FAIL
+
+  [:disabled=false]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:api,operation,rendering,depth:depth_compare_func:*]
@@ -766,6 +932,54 @@
 
   [:format="rg16float";srcValue=1;dstValue=0.4]
     expected: FAIL
+
+  [:format="rgba8unorm";srcValue=0.4;dstValue=0.2]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba8unorm";srcValue=0.4;dstValue=0.4]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba8unorm";srcValue=0.6;dstValue=0.2]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba8unorm";srcValue=0.6;dstValue=0.4]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba8unorm";srcValue=0.8;dstValue=0.2]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rgba8unorm";srcValue=0.8;dstValue=0.4]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg16float";srcValue=0.4;dstValue=0.2]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg16float";srcValue=0.4;dstValue=0.4]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg16float";srcValue=0.6;dstValue=0.2]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg16float";srcValue=0.6;dstValue=0.4]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg16float";srcValue=0.8;dstValue=0.2]
+    expected:
+      if os == "mac": FAIL
+
+  [:format="rg16float";srcValue=0.8;dstValue=0.4]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:api,operation,rendering,color_target_state:color_write_mask,channel_work:*]
@@ -814,6 +1028,10 @@
   [:mask=15]
     expected: FAIL
 
+  [:mask=0]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,rendering,basic:large_draw:*]
   # TODO: <https://bugzilla.mozilla.org/show_bug.cgi?id=1848993>
@@ -833,6 +1051,10 @@
 
 
 [cts.https.html?q=webgpu:api,operation,rendering,draw:vertex_attributes,formats:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,rendering,draw:arguments:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
