--- a/testing/web-platform/mozilla/meta/webgpu/chunked/9/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/9/cts.https.html.ini
@@ -1,12 +1,28 @@
 [cts.https.html?q=webgpu:api,validation,buffer,destroy:while_mapped:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,validation,buffer,mapping:mapAsync,state,destroyed:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
   disabled: true
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,index_format:index_format,setIndexBuffer_before_setPipeline:*]
+  [:setIndexBufferBeforeSetPipeline=false]
+    expected:
+      if os == "mac": FAIL
+
+  [:setIndexBufferBeforeSetPipeline=true]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,index_format:index_format,uint32:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,validation,buffer,mapping:mapAsync,usage:*]
   [:]
@@ -14,6 +30,14 @@
 
 
 [cts.https.html?q=webgpu:api,validation,buffer,create:size:*]
+  [:mappedAtCreation=false]
+    expected:
+      if os == "mac": FAIL
+
+  [:mappedAtCreation=true]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,validation,buffer,mapping:mapAsync,state,mapped:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
@@ -29,258 +53,642 @@
   [:usage1=32;usage2=128]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=32;usage2=256]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=32;usage2=512]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=32;usage2=32768]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=64;usage2=0]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=64;usage2=1]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=64;usage2=2]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=64;usage2=4]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=64;usage2=8]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=64;usage2=16]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=64;usage2=32]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=64;usage2=64]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=64;usage2=128]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=64;usage2=256]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=64;usage2=512]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=64;usage2=32768]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=128;usage2=0]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=128;usage2=1]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=128;usage2=2]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=128;usage2=4]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=128;usage2=8]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=128;usage2=16]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=128;usage2=32]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=128;usage2=64]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=128;usage2=128]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=128;usage2=256]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=128;usage2=512]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=128;usage2=32768]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=256;usage2=0]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=256;usage2=1]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=256;usage2=2]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=256;usage2=4]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=256;usage2=8]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=256;usage2=16]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=256;usage2=32]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=256;usage2=64]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=256;usage2=128]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=256;usage2=256]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=256;usage2=512]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=256;usage2=32768]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=512;usage2=0]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=512;usage2=1]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=512;usage2=2]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=512;usage2=4]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=512;usage2=8]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=512;usage2=16]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=512;usage2=32]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=512;usage2=64]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=512;usage2=128]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=512;usage2=256]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=512;usage2=512]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=512;usage2=32768]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=32768;usage2=0]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=32768;usage2=1]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=32768;usage2=2]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=32768;usage2=4]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=32768;usage2=8]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=32768;usage2=16]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=32768;usage2=32]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=32768;usage2=64]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=32768;usage2=128]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=32768;usage2=256]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=32768;usage2=512]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
 
   [:usage1=32768;usage2=32768]
     expected:
       if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "mac": FAIL
+
+  [:usage1=0;usage2=0]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=0;usage2=1]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=0;usage2=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=0;usage2=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=0;usage2=8]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=0;usage2=16]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=0;usage2=32]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=0;usage2=64]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=0;usage2=128]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=0;usage2=256]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=0;usage2=512]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=0;usage2=32768]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=1;usage2=0]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=1;usage2=1]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=1;usage2=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=1;usage2=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=1;usage2=8]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=1;usage2=16]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=1;usage2=32]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=1;usage2=64]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=1;usage2=128]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=1;usage2=256]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=1;usage2=512]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=1;usage2=32768]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=2;usage2=0]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=2;usage2=1]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=2;usage2=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=2;usage2=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=2;usage2=8]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=2;usage2=16]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=2;usage2=32]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=2;usage2=64]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=2;usage2=128]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=2;usage2=256]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=2;usage2=512]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=2;usage2=32768]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=4;usage2=0]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=4;usage2=1]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=4;usage2=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=4;usage2=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=4;usage2=8]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=4;usage2=16]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=4;usage2=32]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=4;usage2=64]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=4;usage2=128]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=4;usage2=256]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=4;usage2=512]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=4;usage2=32768]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=8;usage2=0]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=8;usage2=1]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=8;usage2=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=8;usage2=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=8;usage2=8]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=8;usage2=16]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=8;usage2=32]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=8;usage2=64]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=8;usage2=128]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=8;usage2=256]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=8;usage2=512]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=8;usage2=32768]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=16;usage2=0]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=16;usage2=1]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=16;usage2=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=16;usage2=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=16;usage2=8]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=16;usage2=16]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=16;usage2=32]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=16;usage2=64]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=16;usage2=128]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=16;usage2=256]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=16;usage2=512]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=16;usage2=32768]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=32;usage2=0]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=32;usage2=1]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=32;usage2=2]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=32;usage2=4]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=32;usage2=8]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=32;usage2=16]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=32;usage2=32]
+    expected:
+      if os == "mac": FAIL
+
+  [:usage1=32;usage2=64]
+    expected:
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:api,validation,buffer,mapping:mapAsync,state,mappingPending:*]
@@ -293,8 +701,16 @@
 
 
 [cts.https.html?q=webgpu:api,validation,buffer,create:limit:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,validation,buffer,mapping:mapAsync,earlyRejection:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,validation,buffer,mapping:mapAsync,offsetAndSizeOOB:*]
   [:]
@@ -306,8 +722,7 @@
     # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
     disabled:
       if os == "linux": true
-    expected:
-      if os == "win": FAIL
+    expected: FAIL
 
 
 [cts.https.html?q=webgpu:api,validation,buffer,mapping:mapAsync,state,mappedAtCreation:*]
@@ -316,54 +731,84 @@
 
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,index_format:index_format,change_pipeline_after_setIndexBuffer:*]
+  [:setPipelineBeforeSetIndexBuffer=false]
+    expected:
+      if os == "mac": FAIL
+
   [:setPipelineBeforeSetIndexBuffer=true]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:api,validation,buffer,destroy:twice:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,index_format:primitive_restart:*]
   [:indexFormat="uint16";primitiveTopology="triangle-list"]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
   [:indexFormat="uint16";primitiveTopology="triangle-strip"]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
   [:indexFormat="uint32";primitiveTopology="point-list"]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
   [:indexFormat="uint32";primitiveTopology="triangle-list"]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
   [:indexFormat="uint32";primitiveTopology="triangle-strip"]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
   [:indexFormat="uint16";primitiveTopology="line-list"]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
   [:indexFormat="uint32";primitiveTopology="line-strip"]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
+
+  [:indexFormat="uint16";primitiveTopology="point-list"]
+    expected:
+      if os == "mac": FAIL
 
   [:indexFormat="uint16";primitiveTopology="line-strip"]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
   [:indexFormat="uint32";primitiveTopology="line-list"]
     expected:
       if os == "linux": [PASS, FAIL]
+      if os == "mac": FAIL
 
 
 [cts.https.html?q=webgpu:api,validation,buffer,destroy:all_usages:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,index_format:index_format,setIndexBuffer_different_formats:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,validation,buffer,mapping:mapAsync,abort_over_invalid_error:*]
   [:]
@@ -376,5 +821,12 @@
 
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,index_format:index_format,uint16:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
+
 
 [cts.https.html?q=webgpu:api,validation,buffer,destroy:error_buffer:*]
+  [:]
+    expected:
+      if os == "mac": FAIL
