Bug 1850045: replace command-context with task-context r=taskgraph-reviewers,releng-reviewers,gabriel
Most of this patch is ripping `command-context` out from Gecko. The other parts are the fairly straightforward conversions from `command-context` to `task-context`.

Differential Revision: https://phabricator.services.mozilla.com/D186822

--- a/taskcluster/ci/source-test/kind.yml
+++ b/taskcluster/ci/source-test/kind.yml
@@ -7,6 +7,7 @@ loader: gecko_taskgraph.loader.transform:loader
 transforms:
     - gecko_taskgraph.transforms.try_job:transforms
     - gecko_taskgraph.transforms.source_test:transforms
+    - taskgraph.transforms.task_context
     - gecko_taskgraph.transforms.release_notifications:transforms
     - gecko_taskgraph.transforms.job:transforms
     - gecko_taskgraph.transforms.task:transforms
@@ -38,3 +39,6 @@ jobs-from:
 job-defaults:
     attributes:
         retrigger: true
+    task-context:
+        from-object: {}
+        substitution-fields: []
